@@ -115,8 +115,10 @@ $pgv_lang["GEDCOM_ID_PREFIX"]		= "Personen ID-Nummer Präfix";
 $pgv_lang["GEDCOM_ID_PREFIX_help"]	= "~#pgv_lang[GEDCOM_ID_PREFIX]#~<br /><br />In Stammbäumen, Nachfahrenbäumen, Verwandtschafts- und anderen Darstellungen wird dieses Präfix der ID vorangestellt, die der Besucher zur Personen-Auswahl eingeben kann, sofern er das Präfix nicht selbst voranstellt.<br />";
 $pgv_lang["SOURCE_ID_PREFIX"]		= "Quellen ID-Nummer Präfix";
 $pgv_lang["REPO_ID_PREFIX"]		= "Archiv ID-Nummer Präfix";
-$pgv_lang["PEDIGREE_FULL_DETAILS"]	= "Geburts- und Todesdetails im Stammbaum und Nachfahrenbaum zeigen";
-$pgv_lang["PEDIGREE_FULL_DETAILS_help"]	= "~#pgv_lang[PEDIGREE_FULL_DETAILS]#~<br /><br />Dieses Feld bestimmt, ob die Einzelheiten der Geburts- und Sterbedaten von Personen standardmäßig dargestellt werden oder nicht.<br />";
+$pgv_lang["PEDIGREE_FULL_DETAILS"]	= "Geburts- und Todesdetails in Diagrammen zeigen";
+$pgv_lang["PEDIGREE_FULL_DETAILS_help"]	= "~#pgv_lang[PEDIGREE_FULL_DETAILS]#~<br /><br />Diese Option bestimmt, ob die Einzelheiten der Geburts- und Sterbedaten in Diagrammen gezeigt werden oder nicht.<br />";
+$pgv_lang["PEDIGREE_SHOW_GENDER"]	= "Geschlecht mittels Ikon in Diagrammen zeigen";
+$pgv_lang["PEDIGREE_SHOW_GENDER_help"]	= "~#pgv_lang[PEDIGREE_SHOW_GENDER]#~<br /><br />Diese Option bestimmt, ob das Geschlecht der Person mittels Ikon in Diagrammen gezeigt wird oder nicht.<br /><br />Da das Geschlecht auch durch die Farbe der Box angedeutet ist, verbirgt diese Option das Geschlecht nicht.  Diese Option verbirgt nur doppelte Information.<br />";
 $pgv_lang["PEDIGREE_LAYOUT"]		= "Standard Stammbaum Layout";
 $pgv_lang["PEDIGREE_LAYOUT_help"]	= "~#pgv_lang[PEDIGREE_LAYOUT]#~<br /><br />Hier bestimmen Sie, ob der Stammbaum im Hochformat oder Querformat generiert werden soll.<br />";
 $pgv_lang["SHOW_EMPTY_BOXES"]		= "Leere Boxen im Stammbaum zeigen";
